<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.ithub</groupId>
    <artifactId>parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>tdd-by-ithub</name>
    <description>Test Driven Development By ithub.ru</description>

    <modules>
        <module>logging</module>
        <module>bank</module>
    </modules>

    <developers>
        <developer>
            <id>tns</id>
            <name>Temnyakov Nikolay</name>
            <email>temnjakovn@gmail.com</email>
        </developer>
        <developer>
            <id>fadesml</id>
            <name>Andrew Buniak</name>
            <email>bakite.buniak@gmail.com</email>
        </developer>
    </developers>

    <inceptionYear>2021</inceptionYear>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit <!--Добавил для 11 jdk-->
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>